# Image-Processing-Algorithms-Optimization

./: Parallelization of Image Processing Algorithms.pptx  README.md  pyproject.toml
src/: benchmark.py  empirical analysis.ipynb  main.py
src/algorithms/: adaptive_gamma_correction.py  convolve.py  gamma_correction.py  gaussian_blur.py  mean_blur.py  sepia.py
src/algorithms/parallel/: adaptive_gamma_correction.py  convolve.py  gamma_correction.py  gaussian_blur.py  histogram_equalization.py  sepia.py  sobel.py
src/algorithms/serial/: adaptive_gamma_correction.py  convolve.py  gamma_correction.py  histogram_equalization.py  mean_blur.py  sepia.py
src/algorithms_parallel/: adaptive_gamma_correction.py  gamma_correction.py  histogram_equalization.py  sepia.py  sobel.py
src/algorithms_serial/: histogram_equalization.py
src/gui/: mainwindow_ui.py
src/perf/: parallel_results.txt  serial_results.txt  test_parallel.py  test_serial.py
