[project]
name = "image-processing-algorithms-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "pillow>=12.2.0",
    "pyqt6>=6.11.0",
]
